# surfe-auto-enrich

./: .gitignore  BugFix.11.24.25.ipynb  README.md  example.env  playground.ipynb  pyproject.toml
src/surfe_auto_enrich/: __init__.py  cli.py  constants.py  operations.py
