[project]
name = "surfe-auto-enrich"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthew Anderson", email = "matt@mandersience.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "polars>=1.29.0",
    "requests>=2.32.3",
    "tinydb>=4.8.2",
    "typer>=0.15.3",
    "typer-config[python-dotenv]>=1.4.2",
]

[project.scripts]
surfe-enrich = "surfe_auto_enrich.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
