[project]
name = "surfe-auto-enrich"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthew Anderson", email = "matt@mandersience.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "polars>=1.29.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "typer>=0.15.3",
]

[project.scripts]
surfe-enrich = "surfe_auto_enrich.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
